--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,11 @@
 
+
 <%= render 'shared/header' %>
 
 
 <div class="container">
+  <h1>Users#new</h1>
+  <p>Find me in app/views/users/new.html.erb</p>
 
 
 </div>
