--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,33 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+
+<%= render 'shared/header' %>
+
+<div class="container">
+
+
+  <div class="about-page-main">
+
+
+
+    <h1>about</h1>
+    <h1>about</h1>
+    <h1>about</h1>
+    <h1>about</h1>
+    <h1>about</h1>
+    <h1>about</h1>
+    <h1>about</h1>
+    <h1>about</h1>
+    <h1>about</h1>
+    <h1>about</h1>
+    <h1>about</h1>
+    
+  </div>
+
+
+</div>
+
+
+
+
+
+
+<%= render 'shared/footer' %>
