--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,74 @@
 
 <%= render 'shared/header' %>
 
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+
+    <div class="item active">
+      <%= image_tag "fan.jpg" %>
+      <div class="carousel-caption">
+        <h2>自分だけの小さなファンクラブを作ろう。</h2>
+      </div>
+    </div>
+
+    <div class="item">
+      <%= image_tag "fan2.jpg" %>
+      <div class="carousel-caption">
+        <h2>歌、ライブ、歌詞、レコーディングなどを提供しコアなファン作りをしよう。</h2>
+      </div>
+    </div>
+
+    <div class="item">
+      <%= image_tag "fan3.jpg" %>
+      <div class="carousel-caption">
+        <h2>表現して食っていく。新しい形。</h2>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
 
 <div class="container">
+
+  <div class="home-main">
+    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
+    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
+    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
+    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
+    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
+    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
+    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
+    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
+    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
+    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
+    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
+    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
+    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
+    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
+    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
+    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
+
+  </div>
+
 
 
 </div>
