home layout done.....

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,6 +38,16 @@
     letter-spacing: 2px;
 }
 
+.navbar-right {
+  a {
+    color: #fff!important;
+  }
+}
+
+.dropdown-menu {
+  background: #333333!important;
+}
+
 
 // footer.html.erb
 
@@ -47,8 +57,10 @@ footer {
   background-color: #333333;
   text-align: center;
   padding-top: 50px;
-  padding-bottom: 15px;
+  padding-bottom: 35px;
   position: relative;
   bottom: 0;
   width: 100%;
+  font-size: 20px;
+  letter-spacing: 2px;
 }
