--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -51,21 +51,50 @@
 
   <div class="home-main">
     <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
-    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
-    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
-    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
-    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
-    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
-    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
-    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
-    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
-    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
-    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
-    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
-    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
-    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
-    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
-    <h1 class="home-title"><%= fa_icon "drupal" %>新着一覧</h1>
+
+    <div class="row home-contents">
+      <div class="col-xs-6 col-md-3 contents-box">
+        <a href="#" class="thumbnail">
+          <%= image_tag "fan.jpg" %>
+        </a>
+      </div>
+
+      <div class="col-xs-6 col-md-3 contents-box">
+        <a href="#" class="thumbnail">
+          <%= image_tag "fan.jpg" %>
+        </a>
+      </div>
+
+      <div class="col-xs-6 col-md-3 contents-box">
+        <a href="#" class="thumbnail">
+          <%= image_tag "fan.jpg" %>
+        </a>
+      </div>
+
+      <div class="col-xs-6 col-md-3 contents-box">
+        <a href="#" class="thumbnail">
+          <%= image_tag "fan.jpg" %>
+        </a>
+      </div>
+
+      <div class="col-xs-6 col-md-3 contents-box">
+        <a href="#" class="thumbnail">
+          <%= image_tag "fan.jpg" %>
+        </a>
+      </div>
+
+      <div class="col-xs-6 col-md-3 contents-box">
+        <a href="#" class="thumbnail">
+          <%= image_tag "fan.jpg" %>
+        </a>
+      </div>
+
+
+
+
+    </div>
+
+
 
   </div>
 
