--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,11 +16,11 @@
 
 
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
+        <li><%= link_to '歌手を探す' %></li>
+        <li><%= link_to '歌手になる' %></li>
+        <li><%= link_to 'Small Fan Clubとは？', pages_about_path %></li>
+        <!-- <li><%= link_to 'link' %></li> -->
+        <li><%= link_to '会員登録' %></li>
 
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
